src/test/ui/rust-unstable-column-gated.stderr
error: the __rust_unstable_column macro is unstable
  --> $DIR/rust-unstable-column-gated.rs:2:20
   |
LL |     println!("{}", __rust_unstable_column!());
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

